        Reviewed by Eric.

http://bugs.webkit.org/show_bug.cgi?id=18340
        Elements with display="none" in a <clipPath> still contribute to clipping path

        Skip elements in clip-path container that have display=none specified.



git-svn-id: svn://svn.chromium.org/blink/trunk@31805 bbb929c8-8fbe-4397-9dbb-9b2b20218538